# umf

./: .gitignore  .secrets-allowlist  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  Containerfile  Cross.toml  LICENSE  README.md  SECURITY.md  deny.toml  mkdocs.yml  pyproject.toml
crates/umf-builder/: Cargo.toml
crates/umf-builder/src/: arg_subst.rs  bench.rs  fsutil.rs  host_requirements.rs  initrd.rs  introspect.rs  kernel.rs  lib.rs  metrics.rs  runtime_config.rs  runtime_writer.rs  vm_runner.rs
crates/umf-builder/src/arg_subst/: tests.rs
crates/umf-builder/src/bench/: tests.rs
crates/umf-builder/src/bootable/: mod.rs  run.rs  tests.rs  validate.rs
crates/umf-builder/src/bootable/run/: tests.rs
crates/umf-builder/src/engine_build/: add.rs  base_image.rs  cache.rs  directives.rs  fetch.rs  mod.rs  run.rs  secrets.rs  state.rs  tests.rs  util.rs
crates/umf-builder/src/engine_build/add/: tests.rs
crates/umf-builder/src/engine_build/base_image/: tests.rs
crates/umf-builder/src/engine_build/cache/: tests.rs
crates/umf-builder/src/engine_build/directives/: tests.rs
crates/umf-builder/src/engine_build/fetch/: tests.rs
crates/umf-builder/src/engine_build/state/: test_support.rs  tests.rs
crates/umf-builder/src/host_requirements/: tests.rs
crates/umf-builder/src/initrd/: cpio_newc.rs  tests.rs
crates/umf-builder/src/initrd/cpio_newc/: tests.rs
crates/umf-builder/src/introspect/: tests.rs
crates/umf-builder/src/kernel/: tests.rs
crates/umf-builder/src/metrics/: tests.rs
crates/umf-builder/src/resolver/: add.rs  from_kernel.rs  mod.rs
crates/umf-builder/src/resolver/add/: tests.rs
crates/umf-builder/src/resolver/from_kernel/: tests.rs
crates/umf-builder/src/runtime_config/: tests.rs
crates/umf-builder/src/runtime_writer/: tests.rs
crates/umf-builder/src/vm_runner/: tests.rs
crates/umf-builder/tests/: air_gapped_container_build.rs  engine_build_smoke.rs  image_emit_round_trip.rs  kernel_producer.rs  multiarch_base_resolve.rs  oci_emit_introspect_round_trip.rs  registry_round_trip.rs
crates/umf-compile/: Cargo.toml
crates/umf-compile/src/: error.rs  filesystem.rs  image.rs  lib.rs  partition.rs  uki.rs
crates/umf-compile/src/filesystem/: tests.rs
crates/umf-compile/src/image/: tests.rs
crates/umf-compile/src/partition/: tests.rs
crates/umf-compile/src/uki/: tests.rs
crates/umf-core/: Cargo.toml
crates/umf-core/src/: architecture.rs  ast.rs  boot.rs  l0.rs  label.rs  lib.rs  subst.rs
crates/umf-core/src/architecture/: tests.rs
crates/umf-core/src/ast/: directive.rs  span.rs  tree.rs
crates/umf-core/src/l0/: tests.rs
crates/umf-core/src/label/: tests.rs
crates/umf-core/src/subst/: tests.rs
crates/umf-core/src/types/: mod.rs  oci.rs  path.rs  url.rs
crates/umf-core/src/types/identifier/: env.rs  label.rs  mod.rs  stage.rs  unit.rs  user.rs
crates/umf-core/src/types/identifier/env/: tests.rs
crates/umf-core/src/types/identifier/label/: tests.rs
crates/umf-core/src/types/oci/: tests.rs
crates/umf-core/src/types/path/: tests.rs
crates/umf-core/src/types/url/: tests.rs
crates/umf-engine/: Cargo.toml
crates/umf-engine/resources/apparmor/: umf-default
crates/umf-engine/src/: bundle.rs  env.rs  erofs.rs  error.rs  hooks.rs  lib.rs  lsm.rs  mount_util.rs  overlay.rs  rootless.rs  run.rs  runtime.rs  seccomp.rs  subid.rs
crates/umf-engine/src/backends/: libcontainer.rs  mod.rs  noop.rs
crates/umf-engine/src/backends/noop/: tests.rs
crates/umf-engine/src/bundle/: tests.rs
crates/umf-engine/src/env/: tests.rs
crates/umf-engine/src/erofs/: tests.rs
crates/umf-engine/src/hooks/: tests.rs
crates/umf-engine/src/lsm/: tests.rs
crates/umf-engine/src/overlay/: tests.rs
crates/umf-engine/src/rootless/: tests.rs
crates/umf-engine/src/run/: tests.rs
crates/umf-engine/src/seccomp/: tests.rs
crates/umf-engine/src/subid/: tests.rs
crates/umf-engine/tests/: erofs_overlay.rs  run.rs  smoke.rs
crates/umf-networking/: Cargo.toml
crates/umf-networking/examples/: egress_smoke.rs
crates/umf-networking/src/: lib.rs  owned_netns.rs  rootless_net.rs  ssrf.rs  tests.rs  vmnet.rs
crates/umf-networking/src/rootless_net/: gateway.rs  native.rs  tapdev.rs  tests.rs
crates/umf-networking/src/rootless_net/gateway/: tests.rs
crates/umf-networking/src/rootless_net/tapdev/: tests.rs
crates/umf-networking/src/ssrf/: tests.rs
crates/umf-networking/src/vmnet/: tests.rs
crates/umf-networking/tests/: vmnet_native.rs
crates/umf-oci/: Cargo.toml
crates/umf-oci/src/: archive.rs  erofs.rs  format.rs  lib.rs  materialize.rs  registry.rs  staging.rs  test_registry.rs
crates/umf-oci/src/archive/: tests.rs
crates/umf-oci/src/erofs/: tests.rs
crates/umf-oci/src/format/: tests.rs
crates/umf-oci/src/image/: artifact.rs  index.rs  mod.rs  serde.rs  tar_util.rs  tests.rs
crates/umf-oci/src/image/artifact/: tests.rs
crates/umf-oci/src/image/index/: tests.rs
crates/umf-oci/src/materialize/: tests.rs
crates/umf-oci/src/registry/: auth.rs  client.rs  error.rs  layout.rs  referrers.rs  search.rs
crates/umf-oci/src/registry/auth/: tests.rs
crates/umf-oci/src/registry/client/: tests.rs
crates/umf-oci/src/registry/layout/: tests.rs
crates/umf-oci/src/registry/referrers/: tests.rs
crates/umf-oci/src/staging/: tests.rs
crates/umf-oci/src/test_registry/: tests.rs
crates/umf-oci/tests/: conformance_image_spec.rs
crates/umf-oci/tests/fixtures/schemas/: README.md
crates/umf-parser/: Cargo.toml
crates/umf-parser/src/: diagnostics.rs  grammar.rs  lexer.rs  lib.rs  tests.rs  validator.rs
crates/umf-parser/src/diagnostics/: tests.rs
crates/umf-parser/src/lexer/: tests.rs
crates/umf-parser/src/validator/: tests.rs
crates/umf-parser/tests/: parse.rs
crates/umf-vmm/: Cargo.toml
crates/umf-vmm/src/: error.rs  handle.rs  lib.rs  runtime.rs
crates/umf-vmm/src/backends/: common.rs  mod.rs
crates/umf-vmm/src/backends/cloud_hypervisor/: mod.rs  spawn.rs  tests.rs
crates/umf-vmm/src/backends/common/: tests.rs
crates/umf-vmm/src/backends/qemu/: mod.rs  spawn.rs  tests.rs
(+111 files in other folders)
